[article-page] mod scss * spacing order action bar items * position fixed for notification

--- a/design/scss/hedi-scss/components/editorial/article/_actionbar.scss
+++ b/design/scss/hedi-scss/components/editorial/article/_actionbar.scss
@@ -14,8 +14,9 @@
     > svg {
       margin: 0 $spacing-02 0 0;
     }
-    &:not(:last-child) {
-      margin: 0 $spacing-06 0 0;
+    margin: 0 0 0 $spacing-06;
+    &:first-child{
+      margin: 0;
     }
   }
 
